--- a/index.html
+++ b/index.html
@@ -30,33 +30,28 @@
 
     <section id="main-slider" class="no-margin">
         <div class="carousel slide">
-            <ol class="carousel-indicators">
-                <li data-target="#main-slider" data-slide-to="0" class="active">1</li>
-                <li data-target="#main-slider" data-slide-to="1">2</li>
-                <li data-target="#main-slider" data-slide-to="2">3</li>
-            </ol>
             <div class="carousel-inner">
 
-                <div class="item active blacky" style="background-image: url(img/1.jpg)">
-                    <div class="container">
+                <div class="item active blacky" style="background-image: url(img/1.png)">
+                    <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-7">
+                            <div class="col-md-12">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">бесперспективный подросток starter pack</h1>
+                                    <h1 class="animation animated-item-1">Бесперспективный подросток starter pack</h1>
                                           						<img class="zaglav" src="img/11.gif">
 
-                                    <ul>
+                                    <ul class="big_list">
                                        <li>Плохо учился в школе</li>
                                        <li>Всегда считал себя гуманитарием</li>
                                        <li>Отказался от поступления в институт</li>
                                        <li>Искал работу по принципу "больше денег - меньше работы"</li>
                                     </ul>
-                                                                        <h1 class="animation animated-item-1">что я хотел?</h1>
+                                                                        <h1 class="animation animated-item-1">In my feelings</h1>
                                                                               						<img class="zaglav"  src="img/12.gif">
 
-                                    <ul>
-                                       <li>Свободу творчества</li>
-                                       <li>Достойную з/п</li>
+                                    <ul class="big_list">
+                                       <li>Свобода творчества</li>
+                                       <li>Достойная з/п</li>
                                        <li>Навыки, которые я смогу применить за пределами России</li>
                                     </ul>
                                 </div>
@@ -67,13 +62,13 @@
                 <!--/.item-->
 
                 <div class="item blacky" style="background-image: url(img/2.jpg)">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-7">
+                            <div class="col-md-8">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Тернистый путь</h1>
                                     <div class="animation animated-item-2">
-                                        <ul>
+                                    <ul class="big_list">
                                        <li>Все мы задавали глупые вопросы (и задаем до сих пор)</li>
                                        <li>Не у всех все получается с пятого раза</li>
                                        <li>Уверенность в выборе направления не приходит сразу</li>
@@ -81,7 +76,7 @@
                                     </div>
                                 </div>
                             </div>
-                              <div class="col-md-5">
+                              <div class="col-md-4">
                                 <div class="carousel-content">
                                 	<img src="img/2.gif">
                                     </div>
@@ -90,9 +85,36 @@
                         </div>
                     </div>
                 </div>
+
+
+                                      <!--/.item-->
+                 <div class="item blacked" style="background-image: url(img/8.jpg)">
+                    <div class="container-fluid">
+                            <div class="row">
+                                                                <div class="carousel-content">
+<div class="col-md-4">
+                                                                        <img src="img/88.gif">
+
+</div>
+                                <div class="col-md-8" style="text-align: right;">
+                                    <h1 class="animation animated-item-1">Миниммальный набор навыков</h1>
+                                                    <ul style="direction:rtl" class="big_list">
+                                                        <li>Уметь верстать</li>
+                                                        <li>Иметь базовое представление о том, что такое UI/UX</li>
+                                                        <li>Иметь базовые знания любого серверного языка</li>
+                                                        <li>Иметь базовые знания JS</li>
+                                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+
                 <!--/.item-->
                  <div class="item blacked" style="background-image: url(img/3.jpeg)">
-                    <div class="container">
+                    <div class="container-fluid">
                             <div class="row">
                             	                                <div class="carousel-content">
 
@@ -101,13 +123,13 @@
                                                                         				<img class="photos" src="img/office.jpg">
 
                             		                <img class="plusminus" src="img/plus.png">
-                            		                <ul style="line-height: 26px !important;">
+                            		                <ul style="line-height: 36px !important;" class="big_list">
                             		                	<li>Объективная оценка труда</li>
                             		                	<li>Никаких "кидал"</li>
                             		                	<li>Заказчик честно обозначает все хотелки</li>
                             		                </ul>
                             		                <img class="plusminus" src="img/minus.png">
-                            		                <ul style="line-height: 26px !important;">
+                                                    <ul style="line-height: 36px !important;" class="big_list">
                             		                	<li>Высокий порог вхождения</li>
                             		                	<li>Постоянное отслеживание сайта не предмет новых заявок</li>
                             		                	<li>Тряска за рейтинг</li>
@@ -117,13 +139,13 @@
                                     <h1 class="animation animated-item-1">Общие площадки</h1>
                                     				<img class="photos" src="img/avito.jpg">
                             		                <img class="plusminus" src="img/plus.png">
-                            		                <ul style="line-height: 26px !important;">
+                                                    <ul style="line-height: 36px !important;" class="big_list">
                             		                	<li>Отсутствие порога вхождения</li>
                             		                	<li>Интересные звонки</li>
                             		                	<li>Сам себе хозяин</li>
                             		                </ul>
                             		                <img class="plusminus" src="img/minus.png">
-                            		                <ul style="line-height: 26px !important;">
+                                                    <ul style="line-height: 36px !important;" class="big_list">
                             		                	<li>Оценка труда - рандом с торгами</li>
                             		                	<li>Заказчик ничего не знает, но всё хочет</li>
                             		                	<li>Игры со шрифтами</li>
@@ -132,6 +154,143 @@
                             	</div>
                             </div>
 
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+
+                                <!--/.item-->
+                 <div class="item blacked" style="background-image: url(img/4.png)">
+                    <div class="container-fluid">
+                            <div class="row">
+                                                                <div class="carousel-content">
+
+                                <div class="col-md-12" style="text-align: right;">
+                                    <h1 class="animation animated-item-1">Ничего личного, просто бизнес</h1>
+                                                    <ul style="direction:rtl" class="big_list">
+                                                        <li>Отдельный номер для клиентов</li>
+                                                        <li>Четко поставленное ТЗ</li>
+                                                        <li>Правки в рамках разумного</li>
+                                                        <li>Деньги <span class="code">===</span> Качество</li>
+                                                    </ul>
+                                    <img class="zavdop"  src="img/44.gif">
+                                    <h1 class="animation animated-item-1">Be brave</h1>
+                                                    <ul style="direction:rtl" class="big_list">
+                                                        <li>Умейте говорить  <span style="color:red">Нет</span></li>
+                                                        <li>Соблюдайте субординацию</li>
+                                                        <li>Умейте говорить <span style="color:red">Нет</span> строгим тоном</li>
+                                                    </uL>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+
+                                <div class="item blacky" style="background-image: url(img/55.jpeg)">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">О деньгах</h1>
+                                    <ul class="big_list">
+                                       <li>6 дней в неделю*4 = 24 дня в месяц</li>
+                                       <li>24 дня*5 часов = 120 часов в месяц</li>
+                                       <li>$800/120 ≈ $6,5 — стоимость часа работы</li>
+                                    </ul>
+                                                                        <h1 class="animation animated-item-1">О тебе</h1>
+
+                                    <ul class="big_list">
+                                       <li>Твоя скорость работы <span class="code">!==</span> среднему значению</li>
+                                       <li>При расчёте сроков, всегда бери на 20-30% больше</li>
+                                       <li>Не работай в тягость</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                                                        <img src="img/55.gif">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+                                                <!--/.item-->
+                 <div class="item blacked" style="background-image: url(img/66.jpg)">
+                    <div class="container-fluid">
+                            <div class="row">
+                                                                <div class="carousel-content">
+<div class="col-md-4">
+                                                                        <img src="img/66.gif">
+
+</div>
+                                <div class="col-md-8" style="text-align: right;">
+                                    <h1 class="animation animated-item-1">Не забывайте о цели</h1>
+                                                    <ul style="direction:rtl" class="big_list">
+                                                        <li>Беритесь за всё, что МОЖЕТЕ освоить в интересующем вас стеке</li>
+                                                        <li>Не бойтесь своего кода</li>
+                                                        <li>Учите английский</li>
+                                                        <li>Используйте англоязычные ресурсы для поиска ответа</li>
+                                                        <li>Вступите в тематические чаты в телеграме</li>
+                                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+
+                               <!--/.item-->
+
+                                <div class="item blacky" style="background-image: url(img/7.jpg)">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Устройтесь покомфортнее</h1>
+                                    <ul class="big_list">
+                                       <li>Изучите git <a>githowto.com</a></li>
+                                       <li>Пользуйтесь плагином Emmet</li>
+                                       <li>Найдите лучший хостинг и научитесь пользоваться его функционалом</li>
+                                        <li>Тайм менеджмент or Die</li>
+                                       <li>Не жалейте денег на апгрейд себя и своей машинки</li>
+                                       <li>Не забывайте о своем здоровье</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                                                                                            <img src="img/77.gif">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/.item-->
+
+                 <!--/.item-->
+
+                                <div class="item blacky" style="background-image: url(img/9.jpg)">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Some tips</h1>
+                                    <ul class="big_list">
+                                       <li>Не забывайте про личную жизнь, живя работой</li>
+                                       <li>Не обманывайте клиентов</li>
+                                       <li>Постарайтесь найти идеальный ритм работы</li>
+                                        <li>Программирование - нескончаемый поток учёбы, убедитесь в своей готовности к этому</li>
+                                       <li>Деньги - не главное</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                                                                                            <img style="display: block; margin: 0 auto" src="img/99.gif">
+                                    <h1 class="animation animated-item-1" style="text-align: center;">that's all</h1>
+
+                            </div>
                         </div>
                     </div>
                 </div>
